--- a/package.json
+++ b/package.json
@@ -1,55 +1,57 @@
 {
   "name": "parcelo",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
-    "@expo/config-plugins": "~9.0.0",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/datetimepicker": "8.3.0",
+    "@react-native-firebase/app": "^18.9.0",
+    "@react-native-firebase/auth": "^18.9.0",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.18",
     "@reduxjs/toolkit": "^1.9.5",
-    "expo": "^52.0.46",
-    "expo-av": "~15.0.2",
-    "expo-blur": "^14.0.3",
-    "expo-camera": "~16.0.18",
-    "expo-device": "^7.0.3",
+    "expo": "^53.0.9",
+    "expo-application": "~6.1.4",
+    "expo-av": "~15.1.4",
+    "expo-blur": "~14.1.4",
+    "expo-build-properties": "~0.14.6",
+    "expo-camera": "~16.1.6",
+    "expo-dev-client": "~5.1.8",
+    "expo-device": "~7.1.4",
     "expo-file-system": "^18.0.12",
-    "expo-firebase-core": "^6.0.0",
-    "expo-firebase-recaptcha": "^2.3.1",
-    "expo-font": "~13.0.4",
-    "expo-haptics": "^14.0.1",
-    "expo-image-picker": "^16.0.6",
-    "expo-linear-gradient": "~14.0.2",
-    "expo-localization": "^16.0.1",
-    "expo-location": "~18.0.10",
-    "expo-media-library": "~17.0.6",
-    "expo-notifications": "^0.29.14",
-    "expo-status-bar": "~2.0.1",
-    "firebase": "^10.7.1",
-    "firebase-admin": "^13.3.0",
+    "expo-font": "~13.3.1",
+    "expo-haptics": "~14.1.4",
+    "expo-image-picker": "~16.1.4",
+    "expo-linear-gradient": "~14.1.4",
+    "expo-localization": "~16.1.5",
+    "expo-location": "~18.1.4",
+    "expo-media-library": "~17.1.6",
+    "expo-notifications": "~0.31.1",
+    "expo-splash-screen": "~0.30.8",
+    "expo-status-bar": "~2.2.3",
+    "firebase": "^11.7.1",
     "geofirestore": "^4.3.0",
-    "react": "18.3.1",
-    "react-native": "0.76.9",
+    "jetifier": "^2.0.0",
+    "react": "19.0.0",
+    "react-native": "0.79.2",
     "react-native-dotenv": "^3.4.8",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "~2.20.2",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-google-places-autocomplete": "^2.5.1",
-    "react-native-maps": "1.18.0",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
+    "react-native-maps": "1.20.1",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-webview": "13.12.5",
+    "react-native-webview": "13.13.5",
     "react-navigation-shared-element": "^3.1.3",
     "react-redux": "^8.0.5",
     "tailwind-react-native-classnames": "^1.5.1"
